Delete request for /cart/all